--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/md5": "^2.3.5",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
